<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DM624资产管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">用户ID</string>
    <string name="BorrowUserName">借记用户名</string>
    <string name="PassWord">密    码</string>
    <string name="Cancel">取消</string>
    <string name="Login">登陆</string>
    <string name="welcome">欢迎使用资产管理系统</string>
    <string name="LoginPicture">欢迎使用资产管理系统</string>
    <string name="BookBtn">图书</string>
    <string name="DeviceBtn">设备</string>
    <string name="QueryInfo">请输入要查询的关键字</string>
    <string name="QueryBtn">查询</string>
    <string name="D_Id">设备ID</string>
    <string name="D_Name">设备名称</string>
    <string name="L_Id">存放位置</string>
    <string name="T_Id">类型</string>
    <string name="Remark">简介</string>
    <string name="Reservation">预约</string>
    <string name="BuyTime">购买时间</string>
    <string name="Price">价格</string>
    <string name="D_State">设备状态</string>
    <string name="B_Time">借出时间</string>
    <string name="R_Time">归还时间</string>
    <string name="B_Id">图书ID</string>
    <string name="B_Name">图书名称</string>
    <string name="B_State">图书状态</string>
    <string name="id">编号：</string>
    <string name="name">姓名：</string>
    <string name="state">状态：</string>
    <string name="State">状态</string>
    <string name="YJ">已借：</string>
    <string name="KJ">可借：</string>
    <string name="phone">电话：</string>
    <string name="infoAlter">信息修改</string>
    <string name="pwdAlter">密码修改</string>
    <string name="confirm1">确定</string>
    <string name="cancel1">取消</string>
    <string name="alterphone_hint">请输入手机号码</string>
    <string name="pwd_hint">请输入旧密码</string>
    <string name="newpwd1_hint">请输入新密码</string>
    <string name="newpwd2_hint">请再次输入新密码</string>
    <string name="please_input_reason">请输入申请理由</string>
    <string name="title_activity_personinfoquery">个人信息</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_collected">Collected</string>

</resources>