<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu0"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QueryInfo" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/querybook_edittext"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/QueryBook_Btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/QueryBtn" />
        </TableRow>
        </TableLayout>
        <TableLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TableRow>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:height="40dp"
                android:text="@string/B_Id"
                android:textSize="14sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:height="40dp"
                android:text="@string/B_Name"
                android:textSize="14sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:height="40dp"
                android:text="@string/L_Id"
                android:textSize="14sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:height="40dp"
                android:text="@string/Remark"
                android:textSize="14sp" />
        </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/Book_Query_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    
</LinearLayout>