<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu0" >
    
     <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        
        <TableRow
            android:layout_marginTop="30dp">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/id" />
            <TextView
                android:id="@+id/Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </TableRow>
        
        <TableRow
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/name" />
            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/state" />
            <TextView
                android:id="@+id/State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/YJ" />
            <TextView
                android:id="@+id/Yj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/KJ" />
            <TextView
                android:id="@+id/Kj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/phone" />
            <TextView
                android:id="@+id/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="" />
        </TableRow>
        
     </TableLayout>
     <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="50dp">
        <Button 
            android:id="@+id/InfoAlterBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/infoAlter"/>
        
        <Button 
            android:id="@+id/PwdAlterBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/pwdAlter"/>
    </LinearLayout>

</LinearLayout>
