<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:minLines="3"
        android:text="@string/LoginPicture"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/layoutTextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/layoutTextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/PassWord"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pswEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/CancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/Cancel"
                android:textSize="21sp" 
                android:onClick="loginclick"/>

            <Button
                android:id="@+id/LoginBtn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/Login"
                android:textSize="21sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/AnnouncementInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lines="3" />

</LinearLayout>